--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "mariadb": "^3.1.0",
     "next": "10.2.3",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "16.14.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "7.23.0",
-    "eslint-config-next": "10.2.3"
+    "eslint-config-next": "10.2.3",
+    "sass": "^1.59.2"
   }
 }
