--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "mariadb": "^3.1.0",
     "next": "10.2.3",
     "react": "16.14.0",
