--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "mariadb": "^3.1.0",
