--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "google-map-react": "^2.2.0",
     "mariadb": "^3.1.0",
     "next": "10.2.3",
     "next-auth": "^3.29.10",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "eslint": "7.23.0",
     "eslint-config-next": "10.2.3",
-    "sass": "^1.59.2",
-    "next-auth": "^3.29.10"
+    "next-auth": "^3.29.10",
+    "sass": "^1.59.2"
   }
 }
