로그인 세션 완료...
TODO
[] 로그아웃은 아직..!
[] 입력폼 검사

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 MARIADB_HOST ='fullstacks.csgna22pwwig.ap-northeast-2.rds.amazonaws.com'
-MARIADB_USER = 'admin'
-MARIADB_PWD = 'fullstack_2023'
-MARIADB_DB = 'fullstacks'
+MARIADB_USER='admin'
+MARIADB_PWD='fullstack_2023'
+MARIADB_DB='fullstacks'
 
-NEXTAUTH_URL = 'http://localhost:3000'
-
-
+SECRET=templesecret
+NEXTAUTH_URL=http://localhost:3000
