--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "16.14.0",
     "react-icons": "^4.8.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "eslint": "7.23.0",
