--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.10.0",
     "react-dom": "16.14.0",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.8.0",
     "shortid": "^2.2.16"
   },
