--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
     "google-map-react": "^2.2.0",
     "mariadb": "^3.1.0",
@@ -21,12 +22,10 @@
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.10.0",
     "react-dom": "16.14.0",
-
     "react-geocode": "^0.2.3",
-
     "react-grid-carousel": "^1.0.1",
-
     "react-icons": "^4.8.0",
+    "selenium-webdriver": "^4.8.2",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.9"
   },
