--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.3",
     "google-map-react": "^2.2.0",
     "mariadb": "^3.1.0",
+    "moment": "^2.29.4",
     "next": "10.2.3",
     "next-auth": "^3.29.10",
     "react": "16.14.0",
